--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>EmblemCon Panel Overlay</title>
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/main.css">
-    <script defer src="js/main.js"></script>
     <script type="importmap">
         {
             "imports": {
@@ -14,27 +13,24 @@
             }
         }
     </script>
-    <script defer type="module" src="js/apps.js"></script>
+    <script defer src="js/main.js"></script>
+    <script defer type="module" src="js/modules/apps.js"></script>
 </head>
 <body>
-    <header class="grid-con">
-        <div id="logo-area" class="col-span-full"></div>
-    </header>
-
     <section id="top-area" class="grid-con">
         <div id="questions" class="col-span-full">
-            <p @click="previousQuestion" class="arrow"><</p>
-            <p>{{questionArray[{{count}}].question}}</p>
-            <p @click="nextQuestion" class="arrow">></p>
+            <p id="left-arrow" class="arrow"><</p>
+            <p id="question"></p>
+            <p id="right-arrow" class="arrow">></p>
         </div>
     </section>
 
     <section id="main-area" class="grid-con">
-        <div id="hostess-area" class="m-col-span-4"></div>
+        <div id="hostess-area" class="col-span-full m-col-span-5"></div>
 
-        <div id="player-area" class= "m-col-span-8">
+        <div id="player-area" class= "col-span-full m-col-start-6 m-col-span-7">
             <div id="player1" class="player">
-                <img src="" alt="">
+                <img src="images/Ducessa.png" alt="">
                 <p class="name">Ducessa</p>
                 <div class="point-area">
                     <button @click="subtractCount1">-</button>
@@ -44,7 +40,7 @@
             </div>
 
             <div id="player2" class="player">
-                <img src="" alt="">
+                <img src="images/Ducessa.png" alt="">
                 <p class="name">Ducessa</p>
                 <div class="point-area">
                     <button @click="subtractCount2">-</button>
@@ -54,7 +50,7 @@
             </div>
 
             <div id="player3" class="player">
-                <img src="" alt="">
+                <img src="images/Ducessa.png" alt="">
                 <p class="name">Ducessa</p>
                 <div class="point-area">
                     <button @click="subtractCount3">-</button>
@@ -64,7 +60,7 @@
             </div>
 
             <div id="player4" class="player">
-                <img src="" alt="">
+                <img src="images/Ducessa.png" alt="">
                 <p class="name">Ducessa</p>
                 <div class="point-area">
                     <button @click="subtractCount4">-</button>
